--- a/static/bootstrap.min.scss
+++ b/static/bootstrap.min.scss
@@ -2599,6 +2599,8 @@ fieldset:disabled a.btn {
 
 .btn-secondary {
 	color: #fff;
+	// background-color: #6c757d;
+	// border-color: #6c757d
 	background-color: #6c757d;
 	border-color: #6c757d
 }
